[gd_scene load_steps=12 format=3 uid="uid://dvt7jwu5k1gth"]

[ext_resource type="Script" path="res://Script/Play/sala_amarela.gd" id="1_ittwj"]
[ext_resource type="Script" path="res://Script/Play/clicar_box.gd" id="2_0mjqf"]
[ext_resource type="PackedScene" uid="uid://cq1unn8f3h8b7" path="res://Interface/intro_monologue.tscn" id="2_1v5dy"]
[ext_resource type="Script" path="res://Script/Play/left_button.gd" id="3_1vtim"]
[ext_resource type="Texture2D" uid="uid://c0kpgvr2ldbe5" path="res://Asset/Images/Left_buttton.png" id="3_e1xkg"]
[ext_resource type="Texture2D" uid="uid://c5i2tdf75ad4e" path="res://Asset/Images/right_button.png" id="4_r1ucr"]
[ext_resource type="PackedScene" uid="uid://bh0mxh6j84uyu" path="res://Interface/Menu/pause_menu.tscn" id="4_rawdv"]
[ext_resource type="Script" path="res://Script/Play/right_button.gd" id="5_46fk2"]
[ext_resource type="Texture2D" uid="uid://ci3uqohia53l0" path="res://Asset/Images/up_button.png" id="5_ajafe"]
[ext_resource type="Script" path="res://Script/Play/up_button.gd" id="7_rfw7i"]
[ext_resource type="Texture2D" uid="uid://cq3vkaqbwoc2d" path="res://Asset/Images/settings button.png" id="8_mil3b"]

[node name="Control" type="Control" node_paths=PackedStringArray("sala_amarela", "sala", "intro_monologue", "pause_menu")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ittwj")
sala_amarela = NodePath(".")
sala = NodePath(".")
intro_monologue = NodePath("IntroMonologue")
pause_menu = NodePath("PauseMenu")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
color = Color(0.945098, 0.815686, 0.572549, 1)
script = ExtResource("2_0mjqf")
metadata/_edit_use_anchors_ = true

[node name="Dialogue Box test 1" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 52.0
offset_top = 48.0
offset_right = 426.0
offset_bottom = 422.0
color = Color(1, 0.423529, 0.407843, 1)
script = ExtResource("2_0mjqf")

[node name="Dialogue Box test 2" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -357.0
offset_top = 36.0
offset_right = -30.0
offset_bottom = 330.0
grow_horizontal = 0
script = ExtResource("2_0mjqf")

[node name="left_button" type="TextureButton" parent="." node_paths=PackedStringArray("sala")]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 54.0
grow_vertical = 2
texture_normal = ExtResource("3_e1xkg")
stretch_mode = 3
script = ExtResource("3_1vtim")
sala = NodePath("..")

[node name="Right_button" type="TextureButton" parent="." node_paths=PackedStringArray("sala")]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -54.0
grow_horizontal = 0
grow_vertical = 2
texture_normal = ExtResource("4_r1ucr")
stretch_mode = 3
script = ExtResource("5_46fk2")
sala = NodePath("..")

[node name="up_button" type="TextureButton" parent="." node_paths=PackedStringArray("sala")]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 69.0
grow_horizontal = 2
texture_normal = ExtResource("5_ajafe")
stretch_mode = 3
script = ExtResource("7_rfw7i")
sala = NodePath("..")

[node name="TextureButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 1787.0
offset_top = 43.0
offset_right = 1882.0
offset_bottom = 140.0
size_flags_horizontal = 8
size_flags_vertical = 0
texture_normal = ExtResource("8_mil3b")

[node name="IntroMonologue" parent="." instance=ExtResource("2_1v5dy")]
visible = false
layout_mode = 1

[node name="PauseMenu" parent="." instance=ExtResource("4_rawdv")]
visible = false
layout_mode = 1
size_flags_horizontal = 4

[connection signal="gui_input" from="MarginContainer/Background" to="MarginContainer/Background" method="_on_gui_input" binds= ["sala_amarela"]]
[connection signal="gui_input" from="Dialogue Box test 1" to="Dialogue Box test 1" method="_on_gui_input" binds= ["caixa_vermelha"]]
[connection signal="gui_input" from="Dialogue Box test 2" to="Dialogue Box test 2" method="_on_gui_input" binds= ["caixa_branca"]]
[connection signal="pressed" from="left_button" to="left_button" method="_on_pressed"]
[connection signal="pressed" from="Right_button" to="Right_button" method="_on_pressed"]
[connection signal="pressed" from="up_button" to="up_button" method="_on_pressed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
